# khatris

./: .gitignore  Cargo.toml  pyproject.toml
python/: DQN.py  MultiHeadDQN.py  board.py  env_helpers.py  lock_data.py  main.py  moves.py  multi_head_DQN.py  multi_head_main.py  piece.py  plot_train_results.ipynb  rl_env.py  rl_env_flat.py
python/models/: convoluted_dqn.py  dqn.py
python/tests/: test_cdqn_model.py
python/train_results/: score-history-2.csv  tetris-cdqn-1.h5  tetris-cdqn-2.h5
src/: lib.rs
src/libtetris/: Cargo.toml
src/libtetris/src/: board.rs  lock_data.rs  piece.rs
