[package]
name = "pylibtetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pylibtetris"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
arrayvec = { version = "0.5", features = ["serde"] }
enumset = { version = "1.0.4", features = ["serde"] }
enum-map = "0.6.0"
serde = { version = "1", features = ["derive"] }
rand = "0.7.0"

